--- a/hw1/NLP_HW1.ipynb
+++ b/hw1/NLP_HW1.ipynb
@@ -29,25 +29,112 @@
         "* 提交必须包含README文件\n",
         "* 试验SVM和naive bayes\n",
         "* Input: features. Output: label $y \\in\\{0,1\\}$, “pro” (1) or “con” (0).\n",
-        "\n"
+        "\n",
+        "**每一个topic用两个模型**:\n",
+        "1. Ngrams: combination of unigrams, bigrams and trigrams as features.(实验找到最好的)\n",
+        "2. 对上面每个features set, 选模型SVM/NB. 也需要调参数防止overfitting (scikit-learn有包，Some examples are “kernel” and “C” for SVM.)\n",
+        "\n",
+        "**Feature selection**\n",
+        "每组第二个模型可以考虑以下的feature或者额外的：\n",
+        "* Ngrams. Unigrams, bigrams, and trigrams.\n",
+        "* Cue words. The initial unigram, bigram, and trigram in a post.\n",
+        "* Repeated punctuation. Features to capture punctuation such as ??, ??????, !!!, or ?!.\n",
+        "* Part-of-speech tags. Features to count the number of nouns, verbs and adjectives in the\n",
+        "text (count_noun, count_verb, and count_adj).\n",
+        "* LIWC features. We give you a number of LIWC features in the data files. You may use\n",
+        "any combination of these as features.The measures we give and their descriptions are:\n",
+        "  * word_count: the number of words in the post.\n",
+        "  * words_pronom: the percent of words in the text that are pronominal.\n",
+        "  * words_per_sen: the average number of words per sentence in the text.\n",
+        "  * words_over_6: the percent of words in the text that are over 6 letters long.\n",
+        "  * pos_emo: the number of positive emotion words in the text.\n",
+        "  * neg_emo: the number of negative emotion words in the text.\n",
+        "* Any other features you come up with."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XC26mq6RPf3U",
+        "colab_type": "text"
+      },
+      "source": [
+        "### 提交要求：\n",
+        "* 对于每个主题，请提供您最佳模型的书面说明，并提供合理的理由您使用或未使用的功能。您为什么认为他们有帮助？您\n",
+        "必须明确列出您在此处尝试过的功能。\n",
+        "* 对每个主题进行错误分析。为了获得最佳表现模型，请选择3个有趣的例子不起作用。指出为什么您认为它们的分类不正确。如果你可以添加其他功能，您认为哪些功能可以帮助提高性能？\n",
+        "对于每个示例，如果篇幅很长，则无需包括整个帖子文本，只需将您的讨论的相关部分和ID。\n",
+        "* 比较和对比您用于每个主题的功能。为什么你会想到一些\n",
+        "功能在不同主题下效果更好还是更差？还是您将相同的功能用于\n",
+        "所有主题，如果可以，为什么您认为效果很好？\n",
+        "\n",
+        "\n",
+        "### 评分\n",
+        "您将按照以下要素进行评分：\n",
+        "#### 2.1分类器（共60分）\n",
+        "您的交付品如下（50分）：\n",
+        "* 一个将火车文件和主题作为命令行参数的classify.py文件（即，可以作为“ python classify.py train-data.csv中止”运行），运行交叉验证选择模型，打印模型的平均精度和F1度量并打印顶部该主题的20个功能。 （60分）。\n",
+        "* 您的自述文件，如下所述（2.3）\n",
+        "* 准确性（10分）\n",
+        "您的系统将获得最高10分，具体取决于最佳模型是否产生了准确性高于或低于我们的阈值。\n",
+        "这些将在9月13日星期五之前发布在Piazza和课程网站上。\n",
+        "\n",
+        "#### 2.2书面答案（30分）\n",
+        "* 为每个主题提供最佳性能模型的依据：说明完整且提供\n",
+        "有关每个模型（及其使用或不使用的功能）为何最好的信息。 （20分）\n",
+        "* 错误分析：所选职位应有所不同，说明应明确说明为什么功能无法预测正确的类别。 （10点）\n",
+        "您的可交付成果如下：\n",
+        "包含您的姓名，电子邮件地址，作业编号和\n",
+        "您对书面部分的回答。\n",
+        "* 2.3软件工程（包括文档）（10分）\n",
+        "您的自述文件必须包含以下内容：\n",
+        "您的姓名和电子邮件地址。\n",
+        "作业编号。\n",
+        "有关如何训练和测试分类器的信息。\n",
+        "分类器的特殊功能（或限制）的描述。\n",
+        "在代码文档中：\n",
+        "应该以有意义的方式记录代码。这可以表示表达功能/变量\n",
+        "名称以及评论。\n",
+        "信息性的方法/功能/变量名称。\n",
+        "高效实施。\n",
+        "\n",
+        "\n",
+        "### 提交说明\n",
+        "您应该在Courseworks上提交以下内容：\n",
+        "一个名为<YOUR-UNI> -hw1.zip的zip文件。这应该确切地列出了文件第2.1节中的可交付成果。您无需在zip中包含数据文件。\n",
+        "您应该在Gradescope上提交以下内容：\n",
+        "如第2.2节所述的hw1-write.pdf。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1GV_Pk21Pfa3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "m1LF_wdqKz2M",
         "colab_type": "code",
+        "outputId": "5ae33627-1ced-4a6b-fcc2-a138ef592995",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
-        },
-        "outputId": "5ae33627-1ced-4a6b-fcc2-a138ef592995"
+        }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -67,11 +154,11 @@
       "metadata": {
         "id": "77T1SQfYRKUM",
         "colab_type": "code",
+        "outputId": "bf01f41e-6fb6-416a-f27f-d0963b0c3531",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 598
-        },
-        "outputId": "bf01f41e-6fb6-416a-f27f-d0963b0c3531"
+        }
       },
       "source": [
         "import numpy as np\n",
@@ -81,7 +168,7 @@
         "data = pd.read_csv('/content/gdrive/My Drive/NLP/stance-data.csv')\n",
         "data.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
