--- a/hw1/NLP_HW1.ipynb
+++ b/hw1/NLP_HW1.ipynb
@@ -109,22 +109,9 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1GV_Pk21Pfa3",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "m1LF_wdqKz2M",
         "colab_type": "code",
-        "outputId": "5ae33627-1ced-4a6b-fcc2-a138ef592995",
+        "outputId": "d0636104-7ac7-4296-f64c-7cd55726c76d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
@@ -134,7 +121,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,7 +141,7 @@
       "metadata": {
         "id": "77T1SQfYRKUM",
         "colab_type": "code",
-        "outputId": "bf01f41e-6fb6-416a-f27f-d0963b0c3531",
+        "outputId": "2f3dad5c-a598-4bf3-9291-6906489b133d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 598
@@ -168,7 +155,7 @@
         "data = pd.read_csv('/content/gdrive/My Drive/NLP/stance-data.csv')\n",
         "data.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -312,14 +299,267 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 2
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "eCM76F9rP1ZN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "92ccda21-ae99-43f1-cf1c-b42a44e0acf8"
+      },
+      "source": [
+        "np.shape(data)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(4649, 14)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t5kuqRT9P5Pz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4c29f42d-0d18-4592-9c00-da57289b93d1"
+      },
+      "source": [
+        "set(data.topic)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'abortion', 'gay rights', 'marijuana', 'obama'}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BgoF2oAqPuuo",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Method 1: Ngrams\n",
+        "combination of unigrams, bigrams and trigrams as features."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "L0cbBqKyRSnD",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "7a2066bd-f9f4-43dd-a279-054e2131e881"
+      },
+      "source": [
+        "topic = \"gay rights\"\n",
+        "data = data[data.topic==\"gay rights\"][[\"post_text\",\"label\"]]\n",
+        "data.head()"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>post_text</th>\n",
+              "      <th>label</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1157</th>\n",
+              "      <td>I believe it is a privilage for them . If they...</td>\n",
+              "      <td>pro</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1158</th>\n",
+              "      <td>With marriage comes a lot of privileges . Taxe...</td>\n",
+              "      <td>pro</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1159</th>\n",
+              "      <td>I do n't see why people have a problem with th...</td>\n",
+              "      <td>pro</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1160</th>\n",
+              "      <td>[ *I 'm not homosexual but I do agree . ] Why ...</td>\n",
+              "      <td>pro</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1161</th>\n",
+              "      <td>No-one should marry ! ! ! But gay people have ...</td>\n",
+              "      <td>pro</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                              post_text label\n",
+              "1157  I believe it is a privilage for them . If they...   pro\n",
+              "1158  With marriage comes a lot of privileges . Taxe...   pro\n",
+              "1159  I do n't see why people have a problem with th...   pro\n",
+              "1160  [ *I 'm not homosexual but I do agree . ] Why ...   pro\n",
+              "1161  No-one should marry ! ! ! But gay people have ...   pro"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o6A1s74TbCEI",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "de9d89de-5c8e-41ef-dd6c-fc103b2a0413"
+      },
+      "source": [
+        "np.shape(data)"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1359, 2)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i2_3hAjIa3Od",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "434ee986-7efa-4da9-98c9-60dcd54fb502"
+      },
+      "source": [
+        "np.random.seed(10)\n",
+        "shuffled_data = np.random.permutation(data)\n",
+        "np.shape(shuffled_data)"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1359, 2)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8N6JrKZcbEIp",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "53ea5732-06b6-4d64-f659-a5195989dda4"
+      },
+      "source": [
+        "shuffled_data[1][1]"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'pro'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pkF-h7tXbh0l",
         "colab_type": "code",
         "colab": {}
       },
@@ -328,6 +568,107 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nXcoab3fbPOZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "k = 5\n",
+        "test_size = len(shuffled_data)//k\n",
+        "for i in range(k):\n",
+        "  test = shuffled_data[i*test_size:(i+1)*test_size]\n",
+        "index_test = i"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rn2oPVgVR53N",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.feature_extraction.text import CountVectorizer\n",
+        "texts = data.post_text"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UMqvSUngSBkf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "5b521049-e527-4de7-acfd-539870dc36f3"
+      },
+      "source": [
+        "print(data.post_text[:1])"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1157    I believe it is a privilage for them . If they...\n",
+            "Name: post_text, dtype: object\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Y6hBUg0ESR7Q",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "cv = CountVectorizer(ngram_range=(1,3))\n",
+        "cv_fit = cv.fit_transform(data.post_text)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tSneafJySh3c",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 283
+        },
+        "outputId": "c3996053-9c39-4d2f-8196-dad249e5de5e"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-28-00f18cbe9daf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcv_fit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/scipy/sparse/base.py\u001b[0m in \u001b[0;36m__len__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    293\u001b[0m     \u001b[0;31m# non-zeros is more important.  For now, raise an exception!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    294\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__len__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 295\u001b[0;31m         raise TypeError(\"sparse matrix length is ambiguous; use getnnz()\"\n\u001b[0m\u001b[1;32m    296\u001b[0m                         \" or shape[0]\")\n\u001b[1;32m    297\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: sparse matrix length is ambiguous; use getnnz() or shape[0]"
+          ]
+        }
+      ]
     }
   ]
 }
