--- a/hw1/NLP_HW1.ipynb
+++ b/hw1/NLP_HW1.ipynb
@@ -111,7 +111,7 @@
       "metadata": {
         "id": "m1LF_wdqKz2M",
         "colab_type": "code",
-        "outputId": "d0636104-7ac7-4296-f64c-7cd55726c76d",
+        "outputId": "b5530567-ef1d-45ce-d177-7089f9fd3a5e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
@@ -141,7 +141,7 @@
       "metadata": {
         "id": "77T1SQfYRKUM",
         "colab_type": "code",
-        "outputId": "2f3dad5c-a598-4bf3-9291-6906489b133d",
+        "outputId": "435d8b5a-f9b1-4132-e557-0574ce997186",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 598
@@ -383,14 +383,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "7a2066bd-f9f4-43dd-a279-054e2131e881"
+        "outputId": "5818ba93-7262-4042-adc3-8f6ff8b61526"
       },
       "source": [
         "topic = \"gay rights\"\n",
         "data = data[data.topic==\"gay rights\"][[\"post_text\",\"label\"]]\n",
         "data.head()"
       ],
-      "execution_count": 30,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -460,7 +460,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
+          "execution_count": 3
         }
       ]
     },
@@ -503,14 +503,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "434ee986-7efa-4da9-98c9-60dcd54fb502"
+        "outputId": "8b1031ca-970a-4a26-b693-7f3eb9fe50d2"
       },
       "source": [
         "np.random.seed(10)\n",
         "shuffled_data = np.random.permutation(data)\n",
         "np.shape(shuffled_data)"
       ],
-      "execution_count": 36,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -522,105 +522,37 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 4
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "8N6JrKZcbEIp",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "53ea5732-06b6-4d64-f659-a5195989dda4"
-      },
-      "source": [
-        "shuffled_data[1][1]"
-      ],
-      "execution_count": 40,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'pro'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 40
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "pkF-h7tXbh0l",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "nXcoab3fbPOZ",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "58b5d495-4862-4052-8195-8fc41cd1f15b"
       },
       "source": [
         "k = 5\n",
         "test_size = len(shuffled_data)//k\n",
-        "for i in range(k):\n",
-        "  test = shuffled_data[i*test_size:(i+1)*test_size]\n",
-        "index_test = i"
+        "# for i in range(k):\n",
+        "#   test = shuffled_data[i*test_size:(i+1)*test_size]\n",
+        "# index_test = i\n",
+        "test_data = shuffled_data[:test_size]\n",
+        "train_data = shuffled_data[test_size:]\n",
+        "print(np.shape(test_data))"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rn2oPVgVR53N",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from sklearn.feature_extraction.text import CountVectorizer\n",
-        "texts = data.post_text"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UMqvSUngSBkf",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
-        },
-        "outputId": "5b521049-e527-4de7-acfd-539870dc36f3"
-      },
-      "source": [
-        "print(data.post_text[:1])"
-      ],
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "1157    I believe it is a privilage for them . If they...\n",
-            "Name: post_text, dtype: object\n"
+            "(271, 2)\n"
           ],
           "name": "stdout"
         }
@@ -629,13 +561,158 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y6hBUg0ESR7Q",
+        "id": "tgfgNwA_wnnj",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "cv = CountVectorizer(ngram_range=(1,3))\n",
-        "cv_fit = cv.fit_transform(data.post_text)"
+        "# Training\n",
+        "from sklearn.feature_extraction.text import CountVectorizer\n",
+        "t0 = time()\n",
+        "num_features = 100\n",
+        "cv = CountVectorizer(stop_words='english', ngram_range=(1,3), \n",
+        "                     max_features=num_features)\n",
+        "X_train = cv.fit_transform(train_data[:,0])\n",
+        "X_test = cv.fit_transform(test_data[:,0])\n",
+        "\n",
+        "y_train = train_data[:,1]\n",
+        "y_test = test_data[:,1]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1jLOWKX6zKfS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "feature_names = cv.get_feature_names()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Eg-Nt9gizijC",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 187
+        },
+        "outputId": "37974b4b-82c6-426b-a879-822c09c07941"
+      },
+      "source": [
+        "feature_names[:10]"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['10',\n",
+              " '10 20',\n",
+              " '10 20 years',\n",
+              " '10 million',\n",
+              " '10 million baby',\n",
+              " '10 years',\n",
+              " '10 years greater',\n",
+              " '100',\n",
+              " '100 effective',\n",
+              " '100 effective dont']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EoRcnmJ6yN77",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Author: Peter Prettenhofer <peter.prettenhofer@gmail.com>\n",
+        "#         Olivier Grisel <olivier.grisel@ensta.org>\n",
+        "#         Mathieu Blondel <mathieu@mblondel.org>\n",
+        "#         Lars Buitinck\n",
+        "# License: BSD 3 clause\n",
+        "import logging\n",
+        "import numpy as np\n",
+        "from optparse import OptionParser\n",
+        "import sys\n",
+        "from time import time\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "from sklearn.datasets import fetch_20newsgroups\n",
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "from sklearn.feature_extraction.text import HashingVectorizer, CountVectorizer\n",
+        "from sklearn.feature_selection import SelectFromModel\n",
+        "from sklearn.feature_selection import SelectKBest, chi2\n",
+        "from sklearn.linear_model import RidgeClassifier\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.svm import LinearSVC\n",
+        "from sklearn.linear_model import SGDClassifier\n",
+        "from sklearn.linear_model import Perceptron\n",
+        "from sklearn.linear_model import PassiveAggressiveClassifier\n",
+        "from sklearn.naive_bayes import BernoulliNB, MultinomialNB\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.neighbors import NearestCentroid\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.utils.extmath import density\n",
+        "from sklearn import metrics"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uoqr3mUp0n_D",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0f816874-df8b-4ed3-af99-686f39c79953"
+      },
+      "source": [
+        "set(y_test)"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'con', 'pro'}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3mYOyUmu0kT1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "target_names = ['pro', 'con']"
       ],
       "execution_count": 0,
       "outputs": []
@@ -645,28 +722,181 @@
       "metadata": {
         "id": "tSneafJySh3c",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 283
-        },
-        "outputId": "c3996053-9c39-4d2f-8196-dad249e5de5e"
+        "colab": {}
       },
       "source": [
-        ""
+        "def trim(s):\n",
+        "    \"\"\"Trim string to fit on terminal (assuming 80-column display)\"\"\"\n",
+        "    return s if len(s) <= 80 else s[:77] + \"...\"\n",
+        "\n",
+        "\n",
+        "# #############################################################################\n",
+        "# Benchmark classifiers\n",
+        "def benchmark(clf, print_report=True, print_cm=True, print_top10=True):\n",
+        "    print('_' * 80)\n",
+        "    print(\"Training: \")\n",
+        "    print(clf)\n",
+        "    t0 = time()\n",
+        "    clf.fit(X_train, y_train)\n",
+        "    train_time = time() - t0\n",
+        "    print(\"train time: %0.3fs\" % train_time)\n",
+        "\n",
+        "    t0 = time()\n",
+        "    pred = clf.predict(X_test)\n",
+        "    test_time = time() - t0\n",
+        "    print(\"test time:  %0.3fs\" % test_time)\n",
+        "\n",
+        "    score = metrics.accuracy_score(y_test, pred)\n",
+        "    print(\"accuracy:   %0.3f\" % score)\n",
+        "\n",
+        "    if hasattr(clf, 'coef_'):\n",
+        "        print(\"dimensionality: %d\" % clf.coef_.shape[1])\n",
+        "        print(\"density: %f\" % density(clf.coef_))\n",
+        "\n",
+        "#         if print_top10 and feature_names is not None:\n",
+        "#             print(\"top 10 keywords per class:\")\n",
+        "#             for i, label in enumerate(target_names):\n",
+        "#                 top10_idx = np.argsort(clf.coef_[i])[-10:]\n",
+        "#                 top10_wrd = [feature_names[i] for i in top10_idx]\n",
+        "#                 print(trim(\"%s: %s\" % (label, \" \".join(top10_wrd))))\n",
+        "#         print()\n",
+        "\n",
+        "    if print_report:\n",
+        "        print(\"classification report:\")\n",
+        "        print(metrics.classification_report(y_test, pred,\n",
+        "                                            target_names=target_names))\n",
+        "\n",
+        "    if print_cm:\n",
+        "        print(\"confusion matrix:\")\n",
+        "        print(metrics.confusion_matrix(y_test, pred))\n",
+        "\n",
+        "    print()\n",
+        "    clf_descr = str(clf).split('(')[0]\n",
+        "    return clf_descr, score, train_time, test_time"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mebnoXzry3OF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 459
+        },
+        "outputId": "8003f890-a78f-4fb4-e74d-4f368d403296"
+      },
+      "source": [
+        "benchmark(BernoulliNB(alpha=.01))"
+      ],
+      "execution_count": 37,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-28-00f18cbe9daf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcv_fit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/scipy/sparse/base.py\u001b[0m in \u001b[0;36m__len__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    293\u001b[0m     \u001b[0;31m# non-zeros is more important.  For now, raise an exception!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    294\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__len__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 295\u001b[0;31m         raise TypeError(\"sparse matrix length is ambiguous; use getnnz()\"\n\u001b[0m\u001b[1;32m    296\u001b[0m                         \" or shape[0]\")\n\u001b[1;32m    297\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: sparse matrix length is ambiguous; use getnnz() or shape[0]"
-          ]
+          "output_type": "stream",
+          "text": [
+            "________________________________________________________________________________\n",
+            "Training: \n",
+            "BernoulliNB(alpha=0.01, binarize=0.0, class_prior=None, fit_prior=True)\n",
+            "train time: 0.012s\n",
+            "test time:  0.003s\n",
+            "accuracy:   0.535\n",
+            "dimensionality: 100\n",
+            "density: 1.000000\n",
+            "classification report:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "         pro       0.33      0.32      0.32        95\n",
+            "         con       0.64      0.65      0.65       176\n",
+            "\n",
+            "    accuracy                           0.54       271\n",
+            "   macro avg       0.48      0.48      0.48       271\n",
+            "weighted avg       0.53      0.54      0.53       271\n",
+            "\n",
+            "confusion matrix:\n",
+            "[[ 30  65]\n",
+            " [ 61 115]]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('BernoulliNB',\n",
+              " 0.5350553505535055,\n",
+              " 0.012425661087036133,\n",
+              " 0.0027828216552734375)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "R70hskbO1aNF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 459
+        },
+        "outputId": "3d128f11-7f9b-412c-d95b-664a4cb54549"
+      },
+      "source": [
+        "from sklearn.svm import LinearSVC\n",
+        "benchmark(LinearSVC(penalty='l1', dual=False,tol=1e-3))"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "________________________________________________________________________________\n",
+            "Training: \n",
+            "LinearSVC(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+            "          intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
+            "          multi_class='ovr', penalty='l1', random_state=None, tol=0.001,\n",
+            "          verbose=0)\n",
+            "train time: 0.009s\n",
+            "test time:  0.000s\n",
+            "accuracy:   0.557\n",
+            "dimensionality: 100\n",
+            "density: 0.970000\n",
+            "classification report:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "         pro       0.31      0.21      0.25        95\n",
+            "         con       0.64      0.74      0.69       176\n",
+            "\n",
+            "    accuracy                           0.56       271\n",
+            "   macro avg       0.47      0.48      0.47       271\n",
+            "weighted avg       0.52      0.56      0.53       271\n",
+            "\n",
+            "confusion matrix:\n",
+            "[[ 20  75]\n",
+            " [ 45 131]]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('LinearSVC', 0.5571955719557196, 0.009181022644042969, 0.00015163421630859375)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 39
         }
       ]
     }
