--- a/hw1/NLP_HW1.ipynb
+++ b/hw1/NLP_HW1.ipynb
@@ -10,7 +10,8 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -111,7 +112,7 @@
       "metadata": {
         "id": "m1LF_wdqKz2M",
         "colab_type": "code",
-        "outputId": "b5530567-ef1d-45ce-d177-7089f9fd3a5e",
+        "outputId": "e3121d12-e17c-4e08-87dd-fd6474c7eac3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
@@ -141,7 +142,7 @@
       "metadata": {
         "id": "77T1SQfYRKUM",
         "colab_type": "code",
-        "outputId": "435d8b5a-f9b1-4132-e557-0574ce997186",
+        "outputId": "564a6020-5009-4bfc-85b0-57d5baa88149",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 598
@@ -383,7 +384,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "5818ba93-7262-4042-adc3-8f6ff8b61526"
+        "outputId": "454a876e-bdf3-472e-b70d-bce8d696651a"
       },
       "source": [
         "topic = \"gay rights\"\n",
@@ -467,43 +468,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "o6A1s74TbCEI",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "de9d89de-5c8e-41ef-dd6c-fc103b2a0413"
-      },
-      "source": [
-        "np.shape(data)"
-      ],
-      "execution_count": 37,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(1359, 2)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 37
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "i2_3hAjIa3Od",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "8b1031ca-970a-4a26-b693-7f3eb9fe50d2"
+        "outputId": "7c8ad424-bf44-418c-96ee-7ef40c9779ff"
       },
       "source": [
         "np.random.seed(10)\n",
@@ -535,7 +506,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "58b5d495-4862-4052-8195-8fc41cd1f15b"
+        "outputId": "ddf9a7c6-367e-4c1c-935e-3ca2cb2e0a03"
       },
       "source": [
         "k = 5\n",
@@ -547,7 +518,7 @@
         "train_data = shuffled_data[test_size:]\n",
         "print(np.shape(test_data))"
       ],
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -568,7 +539,7 @@
       "source": [
         "# Training\n",
         "from sklearn.feature_extraction.text import CountVectorizer\n",
-        "t0 = time()\n",
+        "#t0 = time()\n",
         "num_features = 100\n",
         "cv = CountVectorizer(stop_words='english', ngram_range=(1,3), \n",
         "                     max_features=num_features)\n",
@@ -584,6 +555,37 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "rwCUIiJH9d8h",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ab3d61ee-ac1d-491c-eea5-d0e7db87edc7"
+      },
+      "source": [
+        "from collections import Counter\n",
+        "Counter(y_train)"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Counter({'con': 392, 'pro': 696})"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "1jLOWKX6zKfS",
         "colab_type": "code",
         "colab": {}
@@ -593,6 +595,36 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2VDixN374yqU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d0a94ae6-0f48-4959-e9db-364aa494e762"
+      },
+      "source": [
+        "np.shape(feature_names)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(100,)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -636,6 +668,71 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "sSaC3px75yQ9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "outputId": "61497ec3-0708-4eca-8d11-1f35550143ce"
+      },
+      "source": [
+        "np.argsort(feature_names)"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+              "       17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33,\n",
+              "       34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50,\n",
+              "       51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67,\n",
+              "       68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84,\n",
+              "       85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IiJofgVF5ssG",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b7c75612-b2f1-4149-cd8a-0c66ab8fb0ef"
+      },
+      "source": [
+        "np.argsort(feature_names)[-10:]"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([90, 91, 92, 93, 94, 95, 96, 97, 98, 99])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "EoRcnmJ6yN77",
         "colab_type": "code",
         "colab": {}
@@ -673,36 +770,6 @@
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "uoqr3mUp0n_D",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "0f816874-df8b-4ed3-af99-686f39c79953"
-      },
-      "source": [
-        "set(y_test)"
-      ],
-      "execution_count": 33,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'con', 'pro'}"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 33
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -753,13 +820,14 @@
         "        print(\"dimensionality: %d\" % clf.coef_.shape[1])\n",
         "        print(\"density: %f\" % density(clf.coef_))\n",
         "\n",
-        "#         if print_top10 and feature_names is not None:\n",
-        "#             print(\"top 10 keywords per class:\")\n",
-        "#             for i, label in enumerate(target_names):\n",
-        "#                 top10_idx = np.argsort(clf.coef_[i])[-10:]\n",
-        "#                 top10_wrd = [feature_names[i] for i in top10_idx]\n",
-        "#                 print(trim(\"%s: %s\" % (label, \" \".join(top10_wrd))))\n",
-        "#         print()\n",
+        "        if print_top10 and feature_names is not None:\n",
+        "            print(\"top 10 keywords per class:\")\n",
+        "            #print(np.shape(clf.coef_[1]),clf.coef_[1])\n",
+        "            #for i, label in enumerate(target_names):\n",
+        "            top10_idx = np.argsort(clf.coef_[0])[-10:]\n",
+        "            top10_wrd = [feature_names[i] for i in top10_idx]\n",
+        "            print(trim(\" %s\" % ( \" \".join(top10_wrd))))\n",
+        "        print()\n",
         "\n",
         "    if print_report:\n",
         "        print(\"classification report:\")\n",
@@ -784,39 +852,42 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 459
+          "height": 530
         },
-        "outputId": "8003f890-a78f-4fb4-e74d-4f368d403296"
+        "outputId": "298f4eb9-19ef-4efd-c695-12279539f79a"
       },
       "source": [
-        "benchmark(BernoulliNB(alpha=.01))"
+        "benchmark(MultinomialNB(alpha=.01))"
       ],
-      "execution_count": 37,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "________________________________________________________________________________\n",
             "Training: \n",
-            "BernoulliNB(alpha=0.01, binarize=0.0, class_prior=None, fit_prior=True)\n",
-            "train time: 0.012s\n",
-            "test time:  0.003s\n",
-            "accuracy:   0.535\n",
+            "MultinomialNB(alpha=0.01, class_prior=None, fit_prior=True)\n",
+            "train time: 0.006s\n",
+            "test time:  0.000s\n",
+            "accuracy:   0.520\n",
             "dimensionality: 100\n",
             "density: 1.000000\n",
+            "top 10 keywords per class:\n",
+            " saying thing want let reason couples homosexuality man did need\n",
+            "\n",
             "classification report:\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "         pro       0.33      0.32      0.32        95\n",
-            "         con       0.64      0.65      0.65       176\n",
+            "         pro       0.31      0.31      0.31        95\n",
+            "         con       0.63      0.64      0.63       176\n",
             "\n",
-            "    accuracy                           0.54       271\n",
-            "   macro avg       0.48      0.48      0.48       271\n",
-            "weighted avg       0.53      0.54      0.53       271\n",
+            "    accuracy                           0.52       271\n",
+            "   macro avg       0.47      0.47      0.47       271\n",
+            "weighted avg       0.52      0.52      0.52       271\n",
             "\n",
             "confusion matrix:\n",
-            "[[ 30  65]\n",
-            " [ 61 115]]\n",
+            "[[ 29  66]\n",
+            " [ 64 112]]\n",
             "\n"
           ],
           "name": "stdout"
@@ -825,18 +896,108 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "('BernoulliNB',\n",
-              " 0.5350553505535055,\n",
-              " 0.012425661087036133,\n",
-              " 0.0027828216552734375)"
+              "('MultinomialNB',\n",
+              " 0.5202952029520295,\n",
+              " 0.005521059036254883,\n",
+              " 0.00022912025451660156)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 43
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sMGkCQ9j8eyj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "595d0e9b-7f64-48be-fcac-d7cfead63089"
+      },
+      "source": [
+        "clf = LinearSVC(penalty='l1', dual=False,tol=1e-3)\n",
+        "clf.fit(X_train, y_train)\n",
+        "# pred = clf.predict(X_test)\n",
+        "# score = metrics.accur\n",
+        "np.shape(clf.coef_)"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 100)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DI_9AVVa8eu5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "6d2efc2e-6a49-4412-db85-eb7f7b5147ff"
+      },
+      "source": [
+        "np.shape(clf.coef_)"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 100)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bOSKZMiU8eq1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mBkT4Bjx8emn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -845,15 +1006,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 459
+          "height": 524
         },
-        "outputId": "3d128f11-7f9b-412c-d95b-664a4cb54549"
+        "outputId": "b1d3209f-96e5-40a2-9903-d40ebbedd267"
       },
       "source": [
         "from sklearn.svm import LinearSVC\n",
         "benchmark(LinearSVC(penalty='l1', dual=False,tol=1e-3))"
       ],
-      "execution_count": 39,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -869,36 +1030,46 @@
             "accuracy:   0.557\n",
             "dimensionality: 100\n",
             "density: 0.970000\n",
-            "classification report:\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "         pro       0.31      0.21      0.25        95\n",
-            "         con       0.64      0.74      0.69       176\n",
-            "\n",
-            "    accuracy                           0.56       271\n",
-            "   macro avg       0.47      0.48      0.47       271\n",
-            "weighted avg       0.52      0.56      0.53       271\n",
-            "\n",
-            "confusion matrix:\n",
-            "[[ 20  75]\n",
-            " [ 45 131]]\n",
-            "\n"
+            "top 10 keywords per class:\n"
           ],
           "name": "stdout"
         },
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "('LinearSVC', 0.5571955719557196, 0.009181022644042969, 0.00015163421630859375)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 39
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-38-9734b229d87f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msvm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mLinearSVC\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mbenchmark\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mLinearSVC\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpenalty\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'l1'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdual\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-25-7bcc962345d6>\u001b[0m in \u001b[0;36mbenchmark\u001b[0;34m(clf, print_report, print_cm, print_top10)\u001b[0m\n\u001b[1;32m     29\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mprint_top10\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mfeature_names\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"top 10 keywords per class:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoef_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoef_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget_names\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m                 \u001b[0mtop10_idx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margsort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoef_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mIndexError\u001b[0m: index 1 is out of bounds for axis 0 with size 1"
+          ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "g2FAXlN4_NSn",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Method2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ex-FyYs8_PY5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
