--- a/hw1/NLP_HW1.ipynb
+++ b/hw1/NLP_HW1.ipynb
@@ -1596,7 +1596,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# !!!当下最高 0.612"
+        ""
       ]
     },
     {
@@ -1828,6 +1828,244 @@
       "cell_type": "markdown",
       "metadata": {
         "id": "w4hZ0ufZvS50",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 隔离隔离！！！"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GaoVTcN9-lkg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 343
+        },
+        "outputId": "ac01c736-cf5a-40d3-c28e-a41679636ec6"
+      },
+      "source": [
+        "pipeline_obj = Pipeline([('vect',CountVectorizer()),('tfidf',TfidfTransformer()),('clf',SGDClassifier()),])\n",
+        "print(\"pipeline:\",'\\n', [name for name, _ in pipeline_obj.steps],'\\n')\n",
+        "\n",
+        "parameters = {\n",
+        "    'vect__max_df': (0.5, 0.75),'vect__max_features': (None, 5000, 10000),\n",
+        "    'tfidf__use_idf': (True, False),'tfidf__norm': ('l1', 'l2'),\n",
+        "    'clf__alpha': (0.00001, 0.000001), 'clf__n_iter_no_change': (5,10, 50) }\n",
+        "print(\"parameters:\",'\\n',parameters,'\\n')\n",
+        "\n",
+        "grid_search = GridSearchCV( pipeline_obj, parameters, cv=5, n_jobs = -1,verbose=1 )\n",
+        "#print('grid_search','\\n',grid_search,'\\n') #输出所有参数名及参数候选值\n",
+        "grid_search.fit(test.post_text,test.label),'\\n'#遍历执行候选参数，寻找最优参数\n",
+        "\n",
+        "best_parameters = dict(grid_search.best_estimator_.get_params())#get实例中的最优参数\n",
+        "for param_name in sorted(parameters.keys()):\n",
+        "    print(\"\\t%s: %r\" % (param_name, best_parameters[param_name])),'\\n'#输出最有参数结果\n",
+        "#pipeline_obj.set_params(clf__alpha = 1e-05,clf__n_iter = 50,tfidf__use_idf = True,vect__max_df = 0.5,vect__max_features = None)\n",
+        "#将pipeline_obj实例中的参数重写为最优结果'''\n",
+        "#print(pipeline_obj.named_steps)\n",
+        "\n",
+        "\n",
+        "#用最优参数训练模型'''\n",
+        "# pipeline_obj.fit(Xtrain,Ytrain)\n",
+        "# pred = pipeline_obj.predict(Xtrain)\n",
+        "# print('\\n',metrics.classification_report(Ytrain,pred))\n",
+        "# pred = pipeline_obj.predict(Xtest)\n",
+        "# print('\\n',metrics.classification_report(Ytest,pred))"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "pipeline: \n",
+            " ['vect', 'tfidf', 'clf'] \n",
+            "\n",
+            "parameters: \n",
+            " {'vect__max_df': (0.5, 0.75), 'vect__max_features': (None, 5000, 10000), 'tfidf__use_idf': (True, False), 'tfidf__norm': ('l1', 'l2'), 'clf__alpha': (1e-05, 1e-06), 'clf__n_iter_no_change': (5, 10, 50)} \n",
+            "\n",
+            "Fitting 5 folds for each of 144 candidates, totalling 720 fits\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 2 concurrent workers.\n",
+            "[Parallel(n_jobs=-1)]: Done  46 tasks      | elapsed:   10.4s\n",
+            "[Parallel(n_jobs=-1)]: Done 196 tasks      | elapsed:   38.8s\n",
+            "[Parallel(n_jobs=-1)]: Done 446 tasks      | elapsed:  1.5min\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\tclf__alpha: 1e-05\n",
+            "\tclf__n_iter_no_change: 5\n",
+            "\ttfidf__norm: 'l1'\n",
+            "\ttfidf__use_idf: False\n",
+            "\tvect__max_df: 0.5\n",
+            "\tvect__max_features: 5000\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "[Parallel(n_jobs=-1)]: Done 720 out of 720 | elapsed:  2.4min finished\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vrUfI4JfAszW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ebfc7d9c-0e97-4977-cd49-d4885ea67988"
+      },
+      "source": [
+        "grid_search.best_score_"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5579625292740047"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ma-zGhtYDFyj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.feature_selection import SelectKBest, chi2\n",
+        "X_new = SelectKBest(chi2, k=20).fit_transform(test_X, test_y)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zH5FyJurDQCs",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b4a36cfe-da6a-410f-a61b-311ef6f42b19"
+      },
+      "source": [
+        "np.shape(test_X),np.shape(X_new)"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((1708, 9577), (1708, 20))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eCcnBDWtD0Ga",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "4d812128-8ace-49f6-b472-7baf86ccf2af"
+      },
+      "source": [
+        "\n",
+        "text_clf_SVM = Pipeline([\n",
+        "    ('clf', SGDClassifier()),\n",
+        "])\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "parameters_SVM = {\n",
+        "    'clf__alpha':(1,1e-1,1e-2,1e-3),\n",
+        "    'clf__penalty':('l1','l2','None'),\n",
+        "    'clf__loss':('hinge', 'log', 'modified_huber', 'squared_hinge', 'perceptron'),\n",
+        "    'clf__max_iter':(1000,5000,10000,20000),\n",
+        "    \n",
+        "}\n",
+        "gs_clf_SVM = GridSearchCV(text_clf_SVM, parameters_SVM, cv=5, iid=False, n_jobs=-1)\n",
+        "gs_clf_SVM = gs_clf_SVM.fit(X_new, test_y)\n",
+        "print(gs_clf_SVM.best_score_)\n",
+        "for param_name in sorted(parameters_SVM.keys()):\n",
+        "  print(\"%s: %r\" % (param_name, gs_clf_SVM.best_params_[param_name]))"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.6375692407950473\n",
+            "clf__alpha: 0.01\n",
+            "clf__loss: 'hinge'\n",
+            "clf__max_iter: 20000\n",
+            "clf__penalty: 'None'\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WL6ujh7eEYgs",
+        "colab_type": "text"
+      },
+      "source": [
+        "# !!!当下最高 0.638"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f-pc4ldyENvW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "cv = CountVectorizer(stop_words='english', ngram_range=(1,1))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "s2VmFb3p-k-t",
         "colab_type": "text"
       },
       "source": [
